manifests/menu/api/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: menu-api-deployment
  labels:
    app: menu-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: menu-api
  template:
    metadata:
      labels:
        app: menu-api
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: menu-api
          image: lukamit/menu-api-development:0.1.0-prerelease47
          ports:
            - containerPort: 9000
