manifests/menu/api/service.yml
apiVersion: v1
kind: Service
metadata:
  name: menu-api
  namespace: menu
spec:
  # type: ClusterIP
  type: LoadBalancer
  selector:
    app: menu-api
  ports:
    - port: 80
      targetPort: 9001
