manifests/menu/api/ingress.yml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: menu-api
#   namespace: menu
#   annotations:
#     # General:
#     # kubernetes.io/ingress.class: traefik
#     #
#     # TLS configuration:
#     # traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
#     # traefik.ingress.kubernetes.io/router.tls: "true"
#     #
#     # Middleware:
#     # traefik.ingress.kubernetes.io/router.middlewares:my-middleware@kubernetescrd
# spec:
#   rules:
#     - host: "api.labitup.one"
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: menu-api
#                 port:
#                   number: 9001

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: menu
  name: menu-api
  annotations:
    environment: staging
    alb.ingress.kubernetes.io/load-balancer-name: menu-alb
    alb.ingress.kubernetes.io/tags: project=menu,environment=staging,group=surveyplanet
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:295604779664:certificate/5b7221e5-1b49-4de8-a800-384982f1ec1f
    # alb.ingress.kubernetes.io/wafv2-acl-arn: arn:aws:wafv2:us-west-2:573971801166:regional/webacl/sp-waf-staging/af2be756-da78-4668-afef-969b2bf48d8b
    # alb.ingress.kubernetes.io/load-balancer-attributes: >
    #  access_logs.s3.enabled=true,
    #  access_logs.s3.bucket=surveyplanet-logs-us-west-2,
    #  access_logs.s3.prefix=alb-staging,
    #  deletion_protection.enabled=truespec:
    external-dns.alpha.kubernetes.io/hostname: api.labitup.one
    # external-dns.alpha.kubernetes.io/ttl: "120" #optional
spec:
  ingressClassName: alb
  rules:
    # - host: api.labitup.one
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: menu-api
                port:
                  number: 80
